<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="185dp"
        android:background="@drawable/side_nav_bar"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        android:orientation="vertical"
        android:gravity="bottom|left">

    <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="75dp"
            android:layout_height="75dp"
            tools:srcCompat="@tools:sample/avatars"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/navProfilePic"
            app:layout_constraintTop_toTopOf="parent"
            android:cropToPadding="false"
            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:padding="5dp"
            app:strokeColor="@color/black"
            app:strokeWidth="3dp"
            app:layout_constraintBottom_toTopOf="@+id/view"
            android:contentDescription="@string/profile_image"
            tools:ignore="ImageContrastCheck" />

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:text="@string/default_username"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:id="@+id/navUsername" />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_email"
            android:id="@+id/navEmail" />

</LinearLayout>